# lab2

./: CMakeLists.txt  README.md  build.sh  ip_filter-Linux.deb
.github/workflows/: cmake.yml
src/: ip_filter.cpp  ip_filter.h  main.cpp
test/: input.txt  output_raw.txt  result.txt  test_filter.cpp
